// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KLabel passes the \`for\` attribute to label when \`for\` is provided 1`] = `<label class="k-input-label" for="test-id">Full Name</label>`;

exports[`KLabel renders a tooltip when \`help\` is provided 1`] = `
<label class="k-input-label">
  <div id="test-target-id-1234" aria-controls="test-popover-id-1234" role="button" class="label-tooltip">Full Name <span class="kong-icon kong-icon-help"><!----></span>
    <div id="test-popover-id-1234" role="region" class="k-popover kooltip mt-2  hide-caret" style="width: auto; display: none;" name="fade">
      <!---->
      <div class="k-popover-content">
        <div role="tooltip">This is a tooltip</div>
      </div>
      <!---->
    </div>
  </div>
</label>
`;

exports[`KLabel renders a tooltip when \`info\` is provided 1`] = `
<label class="k-input-label">
  <div id="test-target-id-1234" aria-controls="test-popover-id-1234" role="button" class="label-tooltip">Full Name <span class="kong-icon kong-icon-info"><!----></span>
    <div id="test-popover-id-1234" role="region" class="k-popover kooltip mt-2  hide-caret" style="width: auto; display: none;" name="fade">
      <!---->
      <div class="k-popover-content">
        <div role="tooltip">This is a tooltip</div>
      </div>
      <!---->
    </div>
  </div>
</label>
`;
